src/objects/Survey_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>This is where we store the actual answer the user selected</description>
        <label>Answer</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Survey_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Survey_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Survey Answer</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Survey Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>